new changes on admin

--- a/src/app/settings/edit-threshold-price/edit-threshold-price.component.html
+++ b/src/app/settings/edit-threshold-price/edit-threshold-price.component.html
@@ -52,7 +52,7 @@
                                   <div class="form-group">
                                      <label for="category">Sizes Offered</label>
                                      <select class="form-control rm06" name="status" [(ngModel)]="editdataInfo.size">
-                                        <option value="" selected>{{editdataInfo['size']}}</option>
+                                        <option value="{{editdataInfo['size']}}" selected>{{editdataInfo['size']}}</option>
                                         <option value="10-50">10-50</option>
                                         <option value="10-70">10-70</option>
                                         <option value="10-100">10-100</option>
