--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -107,14 +107,14 @@
                     </span>
                     </a>
                  </li>
-                 <li class="nav-item" style="cursor: pointer;" routerLink="/po/po-list">
+                 <!-- <li class="nav-item" style="cursor: pointer;" routerLink="/po/po-list">
                   <a class="nav-link">
                      <i class="nav-icon fa fa-file-text-o"></i>
                      <span class="nav-text fadeable">
                      <span>PO View</span>
                      </span>
                   </a>
-               </li>
+               </li> -->
                  <li class="nav-item" style="cursor: pointer;" [ngClass]="{open: settingsDropStatus == true}">
                     <a class="nav-link dropdown-toggle" [ngClass]="{collapsed: settingsDropStatus == false}" (click)="settingsStatus()">
                        <i class="nav-icon fa fa-cog"></i>
