--- a/src/app/dashboard/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard/dashboard.component.html
@@ -62,7 +62,7 @@
                         </a>
                      </div>
                   </div>
-                  <div class="row">
+                  <!-- <div class="row">
                      <div class="col-md-6">
                         <div class="panel panel-default">
                            <div class="panel-body">
@@ -91,8 +91,8 @@
                            </div>
                         </div>
                      </div>
-                  </div>
-                  <div class="row">
+                  </div> -->
+                  <!-- <div class="row">
                      <div class="col-md-12">
                         <div class="panel panel-default">
                            <div class="panel-body">
@@ -143,7 +143,7 @@
                            </div>
                         </div>
                      </div>
-                  </div>
+                  </div> -->
                </div>
                <!-- content -->
                <footer class="footer d-none d-sm-block">
