--- a/src/app/manage-charges/freight-charges/freight-charges.component.html
+++ b/src/app/manage-charges/freight-charges/freight-charges.component.html
@@ -14,7 +14,7 @@
                    </ol>
                 </div>
              </div>
-             <div class="row">
+             <div class="row mt-3">
                 <div class="col-md-12">
                    <div class="panel panel-default">
                       <div class="panel-heading">
@@ -29,13 +29,14 @@
                                <div class="form-group">
                                   <label for="search">Search By Status</label>
                                   <select (change)="statusValue($event)" class="form-control rm06" name="status">
+                                     <option value="" selected>--select--</option>
                                      <option value="1">Active</option>
                                      <option value="2">Inactive</option>
                                   </select>
                                </div>
                             </div>
                             <div class="col-sm-4">
-                               <div class="rm05">
+                               <div class="mt-4">
                                   <button (click)="frieghtChargeFilter()" class="btn btn-primary btn-ser" type="submit">Search</button>
                                </div>
                             </div>
@@ -49,7 +50,8 @@
                                      <thead>
                                         <tr>
                                            <th>Pickup Form</th>
-                                           <th>Location</th>
+                                           <th>Pickup Location</th>
+                                           <th>Destination Location</th>
                                            <th>Freight Charges</th>
                                            <th>Status</th>
                                            <th>Action</th>
@@ -59,6 +61,7 @@
                                         <tr *ngFor="let freight of freightCharges | paginate: { itemsPerPage: 10, currentPage: p }">
                                            <td>{{freight?.pickup_from}}</td>
                                            <td>{{freight?.location}}</td>
+                                           <td>{{freight?.destation_location}}</td>
                                            <td>{{freight?.freight_charges}}</td>
                                            <td *ngIf="freight?.status == 1"><span class="badge badge-sm bgc-green-d1 text-white pb-1 px-25">Active</span></td>
                                            <td *ngIf="freight?.status == 2"><span class="badge badge-sm bgc-red-d1 text-white pb-1 px-25">Inactive</span></td>
