--- a/src/app/settings/security-questions/security-questions.component.html
+++ b/src/app/settings/security-questions/security-questions.component.html
@@ -5,7 +5,7 @@
        <!-- /.sidebar -->
        <div role="main" class="main-content">
           <div class="page-content container container-plus">
-             <div class="row">
+             <div class="row mb-3">
                 <div class="col-sm-12">
                    <h4 class="pull-left page-title">Security Question</h4>
                 </div>
@@ -13,17 +13,17 @@
              <div class="row mt-2">
                 <div class="col-md-12">
                    <div class="panel panel-default">
-                      <div class="panel-body">
+                      <div class="panel-body py-4">
                          <div class="row">
-                            <div class="col-sm-12">
+                            <div class="col-sm-10">
                                <div class="form-group">
                                   <label for="security">New Security Question</label>
                                   <input type="text" [(ngModel)]="securityQuestion" placeholder="Enter Security Question" id="security" class="form-control">
                                </div>
                             </div>
                            
-                            <div class="col-sm-12">
-                               <div class="mt-2">
+                            <div class="col-sm-2">
+                               <div class="mt-4">
                                   <button [disabled]="!securityQuestion" class="btn btn-primary btn-ser" (click)="saveQuestion()" type="button">Save</button>
                                </div>
                             </div>
